--- a/.github/workflows/newsletter.yaml
+++ b/.github/workflows/newsletter.yaml
@@ -27,6 +27,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: newsletter
-          path: newsletter.html
+          path: |
+            newsletter.html
+            newsletter.md
+          
 
     
