--- a/.github/workflows/newsletter.yaml
+++ b/.github/workflows/newsletter.yaml
@@ -21,6 +21,8 @@ jobs:
           pip install -r newsletter-requirements.txt
 
       - name: Generate Newsletter
+        env:
+          TOKEN_API_GITHUB: ${{ secrets.TOKEN_API_GITHUB }}
         run: python newsletter.py
 
       - name: Upload Newsletter
